--- a/lib/email_collector_web/controllers/user_html/show.html.heex
+++ b/lib/email_collector_web/controllers/user_html/show.html.heex
@@ -55,16 +55,19 @@
               <tr>
                 <td>
                   <a href={~p"/campaigns/#{campaign.id}"} class="campaign-link">
-                    <%= campaign.name %>
+                    {campaign.name}
                   </a>
                 </td>
-                <td><%= campaign.email_count %></td>
-                <td><%= Calendar.strftime(campaign.inserted_at, "%B %d, %Y") %></td>
+                <td>{campaign.email_count}</td>
+                <td>{Calendar.strftime(campaign.inserted_at, "%B %d, %Y")}</td>
                 <td class="actions">
                   <a href={~p"/campaigns/#{campaign.id}/edit"} class="btn btn-small btn-secondary">
                     Edit
                   </a>
-                  <a href={~p"/campaigns/#{campaign.id}/download"} class="btn btn-small btn-success">
+                  <a
+                    href={~p"/campaigns/#{campaign.id}/download"}
+                    class="btn btn-small btn-success"
+                  >
                     Download CSV
                   </a>
                 </td>
