Add password reset and forgot password logic

--- a/lib/email_collector_web/controllers/auth_html/login.html.heex
+++ b/lib/email_collector_web/controllers/auth_html/login.html.heex
@@ -18,6 +18,7 @@
     </.form>
 
     <div class="auth-links">
+      <a href={~p"/auth/forgot-password"} class="forgot-password-link">Forgot your password?</a>
       <a href={~p"/auth/new"}>Don't have an account? Sign up</a>
     </div>
   </div>
