--- a/lib/email_collector_web/controllers/auth_html/login.html.heex
+++ b/lib/email_collector_web/controllers/auth_html/login.html.heex
@@ -4,17 +4,12 @@
     <p>Welcome back to FastCollect</p>
 
     <.form for={%{}} action={~p"/auth/login"} method="post">
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input id="email" name="email" type="email" required placeholder="Email address" />
+      <.input name="email" type="email" label="Email address" placeholder="Email address" required />
+      <.input name="password" type="password" label="Password" placeholder="Password" required />
+      
+      <div class="mt-2 flex items-center justify-between gap-6">
+        <.button type="submit">Sign in</.button>
       </div>
-
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password" required placeholder="Password" />
-      </div>
-
-      <button type="submit">Sign in</button>
     </.form>
 
     <div class="auth-links">
