--- a/lib/email_collector_web/controllers/auth_html/new.html.heex
+++ b/lib/email_collector_web/controllers/auth_html/new.html.heex
@@ -3,38 +3,14 @@
     <h2>Create your account</h2>
     <p>Join FastCollect today</p>
 
-    <.form for={@changeset} action={~p"/auth"} method="post">
-      <div class="form-group">
-        <label for="user_email">Email address</label>
-        <input
-          type="email"
-          name="user[email]"
-          placeholder="Email address"
-          required
-        />
+    <.form :let={f} for={@changeset} action={~p"/auth"} method="post">
+      <.input field={f[:email]} type="email" label="Email address" placeholder="Email address" required />
+      <.input field={f[:password]} type="password" label="Password" placeholder="Password" required />
+      <.input field={f[:password_confirmation]} type="password" label="Confirm Password" placeholder="Confirm Password" required />
+      
+      <div class="mt-2 flex items-center justify-between gap-6">
+        <.button type="submit">Sign up</.button>
       </div>
-
-      <div class="form-group">
-        <label for="user_password">Password</label>
-        <input
-          type="password"
-          name="user[password]"
-          placeholder="Password"
-          required
-        />
-      </div>
-
-      <div class="form-group">
-        <label for="user_password_confirmation">Confirm Password</label>
-        <input
-          type="password"
-          name="user[password_confirmation]"
-          placeholder="Confirm Password"
-          required
-        />
-      </div>
-
-      <button type="submit">Sign up</button>
     </.form>
 
     <div class="auth-links">
