--- a/lib/email_collector_web/components/layouts/app.html.heex
+++ b/lib/email_collector_web/components/layouts/app.html.heex
@@ -4,7 +4,7 @@
       <div class="w-10 h-10 bg-blue-600 rounded-lg flex-center">
         <span class="text-white font-bold text-lg">FC</span>
       </div>
-      <span class="text-xl font-semibold text-gray-900">FastCollect</span>
+      <span class="text-xl font-semibold text-gray-900">Email Collection</span>
     </a>
   </div>
   <%= if @current_user do %>
