--- a/lib/email_collector_web/controllers/auth_html/login.html.heex
+++ b/lib/email_collector_web/controllers/auth_html/login.html.heex
@@ -1,7 +1,7 @@
 <div class="auth-container">
   <div class="auth-form">
     <h2>Sign in to your account</h2>
-    <p>Welcome back to FastCollect</p>
+    <p>Welcome back to Email Collection</p>
 
     <.form for={%{}} action={~p"/auth/login"} method="post">
       <.input name="email" type="email" label="Email address" placeholder="Email address" required />
