--- a/lib/email_collector_web/controllers/campaign_html/new.html.heex
+++ b/lib/email_collector_web/controllers/campaign_html/new.html.heex
@@ -15,8 +15,8 @@
           required
         />
 
-        <div class="mt-2 flex items-center justify-between gap-6">
-          <.button type="submit">Create Campaign</.button>
+        <div class="mt-2">
+          <.button class="btn btn-primary" type="submit">Create Campaign</.button>
           <a href={~p"/profile"} class="btn btn-secondary">Cancel</a>
         </div>
       </.form>
